--- a/package.json
+++ b/package.json
@@ -1,26 +1,55 @@
 {
   "name": "number-guesser",
   "version": "1.0.0",
-  "description": "Number Guesser In React",
+  "description": "Number Guesser - now with React!",
   "main": "index.js",
-  "scripts": {
+  "directories": {
     "test": "test"
+  },
+  "scripts": {
+    "start": "webpack-dev-server --devtool --hot --inline",
+    "build": "webpack",
+    "test": "mocha --compilers js:babel-register --require test/helpers/setup.js --recursive"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gprocell927/number-guesser-in-react.git"
+    "url": "git+https://github.com/gprocell927/number-guesser-in-react"
   },
   "author": "Gabrielle Procell",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/gprocell927/number-guesser-in-react/issues"
+    "url": "https://github.com/gprocell927/number-guesser-in-react"
   },
-  "homepage": "https://github.com/gprocell927/number-guesser-in-react#readme",
+  "homepage": "https://github.com/gprocell927/number-guesser-in-react",
   "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-core": "^6.14.0",
+    "babel-eslint": "^6.1.2",
+    "babel-loader": "^6.2.5",
+    "babel-polyfill": "^6.13.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-register": "^6.14.0",
     "chai": "^3.5.0",
-    "mocha": "^3.1.2",
+    "css-loader": "^0.25.0",
+    "enzyme": "^2.4.1",
+    "escape-html": "^1.0.3",
+    "eslint": "^3.9.0",
+    "eslint-config-airbnb": "^11.1.0",
+    "eslint-plugin-import": "^2.0.1",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.2.2",
+    "mocha": "^3.0.2",
     "mocha-loader": "^1.0.0",
-    "webpack": "^1.13.3",
-    "webpack-dev-server": "^1.16.2"
-  }
+    "node-libs-browser": "^1.0.0",
+    "node-sass": "^3.10.0",
+    "react": "^15.3.1",
+    "react-addons-test-utils": "^15.3.1",
+    "react-dom": "^15.3.1",
+    "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.15.2"
+  },
+  "dependencies": {}
 }
