--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "test": "test"
   },
   "scripts": {
-    "start": "webpack-dev-server --devtool --hot --inline",
+    "start": "webpack-dev-server --inline --hot",
     "build": "webpack",
-    "test": "mocha --compilers js:babel-register --require test/helpers/setup.js --recursive"
+    "test": "mocha --require test/helpers/setup.js"
   },
   "repository": {
     "type": "git",
@@ -28,17 +28,18 @@
     "babel-loader": "^6.2.5",
     "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.11.1",
+    "babel-preset-react": "^6.16.0",
     "babel-register": "^6.14.0",
     "chai": "^3.5.0",
     "css-loader": "^0.25.0",
     "enzyme": "^2.4.1",
     "escape-html": "^1.0.3",
     "eslint": "^3.9.0",
-    "eslint-config-airbnb": "^11.1.0",
+    "eslint-config-airbnb": "^11.2.0",
     "eslint-plugin-import": "^2.0.1",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.2.2",
+    "jsdom": "^9.8.3",
     "mocha": "^3.0.2",
     "mocha-loader": "^1.0.0",
     "node-libs-browser": "^1.0.0",
